--- a/style.css
+++ b/style.css
@@ -1,14 +1,20 @@
 body {
-    margin: 0;
+    margin: 0;    
+}
+#writersBody {
+	background-image: url(images/fon5.jpg); 
+	background-size: cover;
+	z-index: -1;
+}
+#index {
     background-image: url(images/fon7.jpg);
-    background-size: cover;
-    display: flex;
+	background-size: cover;
+	display: flex;
     align-items: center;
     justify-content: center; 
-    overflow: auto;  
-    
+    overflow: auto; 
 }
-ul {
+.main {
     list-style-type: none;
     margin: auto;
     padding: 0;
@@ -20,11 +26,9 @@ ul {
     
 }
 
-li {
-   margin: auto;
-}
 
-li a {
+
+.active a {
     display: block;
     color: white;
     text-align: center;
@@ -33,13 +37,15 @@ li a {
     margin: auto;
 }
 
-li a:hover:not(.active) {
+ li a:hover:not(.active) {
     background-color: #111;
 }
 
 .active {
-    background-color: #4CAF5;
+    background-color: #4E2B0A;
+    margin: auto;
 }
+
 .button1 {
     background-color: #DD8108;
     border: none;
@@ -76,4 +82,73 @@ div.item {
     background: #82BAAB;
     opacity: 0.6;
     border-radius: 10%;
+}
+#writers {
+	display: flex;
+	width: 100%;
+	height: 100%;
+	justify-content: space-around;
+	opacity: 0.9;
+	
+}
+
+.writer {
+	background-color: rgba(34, 117, 48, 0.57);
+	display: flex;
+	width: 1000px;
+	height: 20%;
+	border-style: double;
+	border-width: thick;
+	border-color: hsla(196, 48%, 32%, 0.21);
+	border-radius: 5%;
+	margin: 5px;
+}
+.image {
+	height: 40%;
+	align-self: flex-start;
+	margin-top: 5px;
+}
+.image:first-child {
+	margin-right: 50px;
+	margin-left: 50px; 
+}
+.content {
+	align-self: center;
+	background-color: #E1E2CA;
+	width: 500px;
+	height: 50%;
+	border-radius: 10%;
+	text-align: center;
+	opacity: 0.7;
+	font-family: courier;
+    font-weight: bold;
+    font-size: 20px;
+    font-style: oblique;
+    font-variant: small-caps; 
+}
+
+
+.hide {
+    display: none; 
+}
+.hide + label ~ div{
+    display: none;
+}
+
+.hide + label {
+    border-bottom: 1px dotted green;
+    padding: 0;
+    color: green;
+    cursor: pointer;
+    display: inline-block; 
+}
+
+.hide:checked + label {
+    color: red;
+    border-bottom: 0;
+}
+
+.hide:checked + label + div {
+    display: block; 
+	text-align: center;
 }
